# media-util

./: .gitattributes  .gitignore  AGENTS.md  AI_PROJECT_CONTEXT.md  GEMINI.md  LICENSE  PROJECT_DOC.md  README.md  SKILL.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-dev.yml  release.yml
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  lib.rs  main.rs  media.rs  runtime.rs
src-tauri/src/detection/: commands.rs  engine.rs  mod.rs  processor.rs  task_control.rs  yolo.rs
src-tauri/src/media/: icons.rs  image.rs  model_manager.rs  resource_manager.rs  shared.rs  transcription.rs  video.rs
src/components/: detection-resource-manager.tsx  drag-drop-overlay.tsx  image-icon-tab.tsx  media-preview-dialog.tsx  task-empty-state.tsx  task-item-actions.tsx  task-page-toolbar.tsx  task-start-button.tsx  task-status-badge.tsx  version-display.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  tooltip.tsx
src/hooks/: useDetectionStore.ts  useDragDropPaths.ts  usePickMediaInputs.ts  useTaskPageAnimations.ts  useTaskStore.ts  useTaskTimer.ts  useTasks.ts  useUIStore.ts
src/lib/: config.ts  error-diagnosis.ts  icon-presets.ts  models.ts  store.ts  utils.ts
src/routes/: __root.tsx  detection.tsx  images.tsx  index.tsx  overview.tsx  settings.tsx  transcribe.tsx  video.tsx  videos.tsx
