[package]
name = "media-util"
version = "1.0.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "media_util_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
image = { version = "0.25", features = ["ico"] }
photon-rs = "0.3"
zip = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
log = "0.4"
oxipng = "9"
imagequant = "4"
png = "0.17"
mozjpeg = "0.10"
icns = "0.3.1"
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "onnx"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
flate2 = "1"
tar = "0.4"

# 构建优化配置
[profile.dev]
incremental = true # 开启增量编译，加快开发环境编译速度

[profile.release]
incremental = true # 开启增量编译，配合 CI 缓存提速
panic = "abort"   # 发生 panic 时直接终止，减小二进制体积
codegen-units = 1 # 限制代码生成单元为 1，以获得更好的全局优化
lto = true        # 开启链接时优化 (Link Time Optimization)
opt-level = "s"   # 针对体积进行优化 ("s" 或 "z" 通常比 "3" 更适合 Tauri 应用)
strip = true      # 自动剥离二进制文件中的符号信息，大幅减小体积 (仅限 Rust 1.59+)

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.3", features = ["whisper-vulkan", "ort-directml"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
# transcribe-rs = { version = "0.3.11", default-features = false, features = ["ort-directml"] }
